# yeg-chat

./: readme.md  yeg-chat.sln
yeg-chat-client/: CMakeLists.txt  asio.h  buffer.h  chat_client.cpp  chat_client.h  console.cpp  console.h  main.cpp  yeg-chat-client.vcxproj  yeg-chat-client.vcxproj.filters
yeg-chat-server/: CMakeLists.txt  asio.h  async_handshake.h  async_read_message.h  async_send_error.h  buffer.h  chat_server.cpp  chat_server.h  function_codes.h  main.cpp  read_message_op.h  readme.md  yeg-chat-server.vcxproj  yeg-chat-server.vcxproj.filters
